--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
         run: ls -la
 
       - name: Compress build folder (optional step)
-        run: tar -czf build.tar.gz .next node_modules package.json package-lock.json next.config.js postcss.config.js tailwind.config.js tsconfig.json
+        run: tar -czf build.tar.gz .next node_modules package.json package-lock.json next.config.js postcss.config.js tailwind.config.ts tsconfig.json
 
       - name: Copy files to EC2 via rsync
         uses: burnett01/rsync-deployments@7.0.1
