--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,5 @@ jobs:
             tar -xzf build.tar.gz
             rm build.tar.gz
 
-            pm2 stop omniroute || true
-            pm2 start npm --name omniroute -- run start
+            pm2 restart omniroute || pm2 start npm --name omniroute -- run start
             pm2 save
