--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^4.1.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
@@ -65,10 +66,13 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-markdown": "^9.0.3",
     "react-resizable-panels": "^2.1.3",
+    "react-syntax-highlighter": "^15.6.1",
     "react-zoom-pan-pinch": "^3.6.1",
     "reactflow": "^11.11.4",
     "recharts": "^2.12.7",
+    "remark-gfm": "^4.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
@@ -76,5 +80,8 @@
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
