--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "input-otp": "^1.2.4",
+    "katex": "^0.16.21",
     "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
@@ -68,13 +69,16 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-katex": "^3.0.1",
     "react-markdown": "^9.0.3",
     "react-resizable-panels": "^2.1.3",
     "react-syntax-highlighter": "^15.6.1",
     "react-zoom-pan-pinch": "^3.6.1",
     "reactflow": "^11.11.4",
     "recharts": "^2.12.7",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
